--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-springBoot {
-	mainClass = 'com.uplus.together.TogetherApplication'
-}
-
 group = 'com.yourcompany'
 version = '0.0.1-SNAPSHOT'
 
@@ -59,6 +55,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+bootJar {
+	mainClass.set('com.uplus.together.TogetherApplication')
 }
 
 tasks.named('test') {
